# hello-esy

./: README.md  dune-project  i.sh  package.json
esy.lock/: index.json
test/: dune
testExe/: dune
